--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
 
 <body>
       <div class = "container">    
-        <!-- <router-outlet></router-outlet> -->  
+        <router-outlet></router-outlet> 
         <p class="text-center">More Life, More Streaming</p>
       </div>
 </body>
