routes are now working with buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,8 @@
   <links>    
     <ul class="navbar-nav ml-auto" style="padding-right: 50px;">
       <div class="d-lg-flex d-md-inline">
-        <a mdbBtn class="nav-link waves-light cls_button shadow-none" color="blue" mdbWavesEffect outline="true" [routerLink]="''">Home</a>
-        <a mdbBtn class="nav-link waves-light cls_button shadow-none" color="blue" mdbWavesEffect outline="true" [routerLink]="''">Movies / Series</a>
+        <a mdbBtn class="nav-link waves-light cls_button shadow-none" color="blue" mdbWavesEffect outline="true" [routerLink]="'/home'">Home</a>
+        <a mdbBtn class="nav-link waves-light cls_button shadow-none" color="blue" mdbWavesEffect outline="true" [routerLink]="'/movies'">Movies / Series</a>
       </div>
     </ul>
   </links>
