--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -81,8 +81,8 @@ a:link {
     
         .cls_small_logo{
 
-            width: 32px;
-            display: block;
+            width: 100%;
+            //display: block;
           }
 
           .main{
