--- a/src/app/movies/movies.component.scss
+++ b/src/app/movies/movies.component.scss
@@ -1,9 +1,3 @@
-.grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    padding: 2px 2px 2px 2px;
-  }
-.grid-item {
-  border: 2px solid;
-  border-radius: 10px;
+.src{
+  width: 50px;
 }
