--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -7,7 +7,7 @@
       <mdb-card-title>
         <h4>{{movies.Title}}</h4>
       </mdb-card-title>
-      <!-- <a href="#" mdbBtn color="primary" mdbWavesEffect>More Info</a> -->
+      <a [routerLink]="'/searchedMovies'" mdbBtn color="primary" mdbWavesEffect>More Info</a>
     </mdb-card-body>
   </mdb-card>
   </div>
