--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <mdb-navbar SideClass=" navbar shadow-none navbar__bg navbar-expand-lg navbar-light white" [containerInside]="false">
 
     <div class="cls_large_logo" >
-      <img href="#" src = "../assets/games.png">
+      <img href="#" src = "../assets/games1.png">
     </div>
   
   
@@ -15,6 +15,10 @@
     </links>
   
   </mdb-navbar>
+
+  <!-- Background image -->
+
+<!-- Background image -->
   <body>
 <router-outlet></router-outlet> 
 
