--- a/src/app/movies/info/info.component.html
+++ b/src/app/movies/info/info.component.html
@@ -1,26 +1,3 @@
-<!-- <mdb-card>
-   
-    <mdb-card-img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(97).jpg" alt="Card image cap"></mdb-card-img>
-   
-    <mdb-card-body>
-  
-     
-      <mdb-card-title>
-        <h4>Card Title</h4>
-      </mdb-card-title>
-  
-     
-      <mdb-card-text> 
-          {{store.movieInfo | json}}
-      </mdb-card-text>
-  
-      <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a>
-    </mdb-card-body>
-  </mdb-card> -->
-
-
- 
-    <!-- Card -->
     <mdb-card
     
 
@@ -35,6 +12,8 @@
             {{store.movieInfo.Type}}
           </h5>
           <h3 class="card-title pt-2"><strong>{{store.movieInfo.Title}}</strong></h3>
+          <h3 class="card-title pt-2"><strong>{{store.movieInfo.Year}}</strong></h3>
+
           <p>
            
           </p>
