--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
       
     />
     <div class="input-group-append">
-      <button [disabled] = "!movieName" (click)="submit()" class="btn btn-secondary" type="button">
+      <button [disabled] = "!movieName" (click)="submit()" (click)="clearSearch()" class="btn btn-secondary" type="button">
         <i class="fa fa-search"></i>
       </button>
     </div>
